# luminance-chroma-ir-rgb-fusion

./: .gitignore  PERF_IMPROVEMENTS.md  README.md  TODO.md  package.xml  setup.cfg  setup.py
config/: params.yaml
cpp/: CMakeLists.txt  package.xml
cpp/config/: fastdds_profile.xml  params.yaml
cpp/include/ir_rgb_fusion_cuda/: cuda_check.hpp  fusion_kernel.cuh  fusion_pipeline.hpp
cpp/launch/: fusion.launch.py
cpp/src/: fusion_kernel.cu  fusion_node.cpp  fusion_pipeline.cpp
cpp/viewer/: CMakeLists.txt  package.xml
cpp/viewer/src/: viewer_node.cpp
launch/: fusion.launch.py
luminance_chroma_ir_rgb_fusion/: fusion_node.py  fusion_pipeline.py
realsense-setup/: README.md  d400_stereo_rgb.launch.py
