<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>luminance_chroma_ir_rgb_fusion</name>
  <version>0.1.0</version>
  <description>IR luma + RGB chroma fusion for Intel RealSense D435i trinocular setup</description>
  <maintainer email="gus@todo.todo">gus</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>

  <test_depend>ament_python</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
